Web Simple Crud Nodejs, Express, Angularjs and MongoDB

--- a/Api-Nodejs-Express-MongoDb-AngularJs/client/index.html
+++ b/Api-Nodejs-Express-MongoDb-AngularJs/client/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width-device-width, initial-scale-1">
-	<title>MEAN CRUD</title>
+	<title>Api AgendaPop</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link href="style.css" rel="stylesheet">
 </head>
@@ -13,11 +13,11 @@
 		<div class="header clearfix">
 			<nav>
 				<ul class="nav nav-pills pull-right">
-					<li role="presentation" class="active"><a href="#/employees">Employee List</a></li>
-					<li role="presentation"><a href="#/employees/create"> Add New Employee</a></li>
+					<li role="presentation" class="active"><a href="#/contactos"> <span class="glyphicon glyphicon-plus"></span> Lista de Contactos</a></li>
+					<li role="presentation"><a href="#/contactos/create"> <span class="glyphicon glyphicon-plus"></span> Agregar Nuevo Contacto</a></li>
 				</ul>
 			</nav>
-			<h3 class="text-muted">Simple MEAN web Application using CRUD operation</h3>
+			<h3 class="text-muted">Simple Web Using MongoDB and Nodejs-Angularjs</h3>
 		</div>
 		<div ng-view></div>
 		<!--<div ng-controller="empController"><h1>{{getEmployees}}</h1></div>-->
